# codingdojo-labes3

./: README.md  administradores.db  agenda.db  locais.db  participantes.db  pyproject.toml  requirements.txt  run.bat  run.sh
api/: database.py  main.py
api/administradores/: models.py  routes.py
api/agenda/: models.py  routes.py
api/feedback/: database.py  models.py  routes.py
api/locais/: database.py  models.py  routes.py
api/palestrantes/: database.py  models.py  routes.py
api/participantes/: database.py  models.py  routes.py
